--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "rollup -wc rollup.config.dev.js",
-    "build": "rollup -c rollup.config.dev.js",
-    "prd": "rollup -c rollup.config.prod.js"
+    "build": "eslint ./src && rollup -c rollup.config.dev.js",
+    "prd": "rollup -c rollup.config.prod.js",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.19.1",
     "@vue/compiler-sfc": "^3.2.39",
+    "eslint-plugin-vue": "^9.5.1",
     "rollup": "^2.79.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
